syntax = "proto3";

package AuthService;

option go_package = "github.com/go-kafka-microservice/AuthService";


message Credentials {
    string Email = 1;
    string Password = 2;
}

message TokenRequest {
    string Token = 1;
} 

message Response {
    string Token = 1;
    string Err = 2;
}

// Define Service
service AuthServices {
    rpc Authenticate(Credentials) returns (Response) {}
	rpc Authorize(TokenRequest) returns (Response) {}
}